Bug 691897 shows a PDF that is much slower when transparency is enabled than when it is not. The time is primarily spent in the stroke filling code due to the fact that when transparency is enabled strokes need to be rendered all at once, rather than segment by segment. This causes the scan conversion code to have to work much harder.

In fact, the code uses solid alpha and "compatible" blend mode for most
strokes, so we would be perfectly safe to use the normal mechanism. The
code attempts to recognise this case already, but was only spotting "Normal"
blend mode and not it's synonym "Compatible". We now roll the two together.

Cluster testing shows this produces various differences; none to do with
blending, all to do with different roundings in the positions of the stroked
paths. Bug 690845 is open for this already.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@12038 a1074d23-0009-0410-80fe-cf8c14f379e6